--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "electron-quick-start",
+  "name": "p.a.schedule",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Electron application for creating schedule of ukrainian police academy",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/Periculosus/p.a.schedule",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "schedule",
+    "police",
+    "academy",
+    "ukraine"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Alex Babaevsky",
+  "license": "f2s",
   "devDependencies": {
     "electron": "~1.7.8"
   }
